Rebrand project from BecauseImStuck to Purp
- Renamed project folder from becauseImstuck to purp
- Updated all references to becauseimstuck/BecauseImStuck/becauseImstuck to purp/Purp
- Renamed database from becauseimstuck.db to purp.db in all config files
- Updated all HTML templates with new branding
- Updated README and all documentation files
- Updated Docker configuration and compose files
- Updated infrastructure templates (Ansible, Terraform)
- Renamed systemd service template from becauseimstuck.service.j2 to purp.service.j2
- Updated all deployment scripts and workflows

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -8,7 +8,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: becauseimstuck
+      IMAGE_NAME: purp
     steps:
       - uses: actions/checkout@v4
 
