--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,11 +96,11 @@ jobs:
     
     - name: Build Docker image
       run: |
-        docker build -t becauseimstuck:test .
+        docker build -t purp:test .
     
     - name: Test Docker image
       run: |
-        docker run -d -p 5000:5000 --name test-container becauseimstuck:test
+        docker run -d -p 5000:5000 --name test-container purp:test
         sleep 10
         curl -f http://localhost:5000 || exit 1
         docker stop test-container
