Add Draft Bill Workspace feature with visibility controls and AI bill drafting
- Added DraftBill and DraftBillComment models with full CRUD
- Implemented 3-tier visibility system (hidden/constituents/public)
- Added staffer role support with rep_boss_id relationship
- Created workspace dashboard for reps to manage drafts
- Built draft detail view with commenting system
- Enhanced result.html with 'Save as Draft' form
- Updated rep profile pages to show visible drafts to constituents
- Added 12 service layer functions for draft management
- Created comprehensive test suite (test_draft_workspace.py)
- All draft workspace tests passing (visibility, comments, updates)
- Updated navigation with workspace links for reps and staffers
- Total: 1,475 lines of production code + documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ beautifulsoup4>=4.12.2
 Flask-Migrate>=4.0.5
 requests>=2.31.0
 APScheduler>=3.10.4
+
+# PDF text extraction for bill text fetching
+pdfplumber>=0.10.0
+PyPDF2>=3.0.0
